--- a/Views/Home/beregn2.cshtml
+++ b/Views/Home/beregn2.cshtml
@@ -5,7 +5,10 @@
 <h3>@ViewBag.Message</h3>
 <body>
 
-
+<!--LOGO-->
+    <a href="#">
+      <h1 class="logo">Meyer!</h1>
+  </a>
 
     <!--TITEL-->
     <div class="titel">
@@ -114,124 +117,201 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.0.16/dist/sweetalert2.all.min.js"></script>
 </body>
 
-<script>
-//Array til at opbevare de terninger der bliver trykket på
-let dice = [];
-var antalTerninger = 0;
 
-//Funktion changeClass, til interaktivt på terninger
-  function changeClass(tal){
-  
-      //Henter id fra terningerne
-      var interaktiv = document.getElementById(tal);
-
-          if(interaktiv.className =="dice face-"+tal){
-              //Skifter style fra stadie 1 til stadie 2.
-              interaktiv.className = "one_selected face-"+tal;
-
-              //Giver id tal til array og giver +1 til variabel terning
-              dice.push(tal);
-              antalTerninger ++;
-          }
-
-        ////Skifter style fra stadie 2 til stadie 3.
-        //Det helt samme
-        else if(interaktiv.className =="one_selected face-"+tal){
-          interaktiv.className = "both_selected face-"+tal;
-          dice.push(tal);
-          antalTerninger ++;
-        }
-
-          //Skifter style fra stadie 3 til stadie 1.
-          else if(interaktiv.className =="both_selected face-"+tal){
-            interaktiv.className = "dice face-"+tal;
-
-            //trækker to værdier ud af array + minusser variablen med 2.
-            dice.pop(tal);
-            dice.pop(tal);
-            antalTerninger = antalTerninger - 2;
-          }  
-   }
-
-   //Beregn funktion
-   function Beregn(){
-      if(antalTerninger==2){
+    <script>
+      //Array til at opbevare de terninger der bliver trykket på
+      let dice = [];
+      var antalTerninger = 0;
       
-      //Sortere array efter størst til mindst 
-      dice.sort(function(a, b){return b - a});
-      
-      
-        //Sætter de to array sammen til en samlet string
-        var slag = dice.join('');
-
-        //Hvis slag er lille meyer eller meyer, lav om på rækkefølgen.
-        if(slag == 21){
-          slag = 12;
-        }
-
-        else if(slag == 31){
-          slag = 13;
-        }
-      
-        //Erklærer variabler der skal bruges senere
-                var BeregnKast = slag;
-                var sandsynlighed;
-
-                consol.log(slag);
-                consol.log("pre ajax");
-
-            $.ajax({
-              type: "POST",
-              url: "/home/FåSandsynlighed",
-              data: slag,
-              success: function(good){
-                console.log(slag.Sandsynlighed)
-             }
-              });
-
-              consol.log(slag);
-              consol.log("Post ajax");
-
-                //Forrige slag
-                document.getElementById("ForrigKast").innerHTML = BeregnKast;
-                
-              //Output til hvad der bliver desplayed på hjemmesiden
-              var output = "Sansynligheden for, at slå lige så meget eller højere er: <br/>"+ sandsynlighed;
-              document.getElementById("output").innerHTML = output;
-          Reset();
-     }
-            else{ 
-
-                  //Kører funktionen Reset(); & display alert
-                  Reset();
-                  Swal.fire("", "Vælg KUN 2 terninger", "warning");
-                }
-
-                
-   }
-
-   //Reset alle værdier, så man kan fortage sig ny beregning
-   function Reset(tal){
-
-    //Reset variabler
-     dice = [];
-     slag = 0;
-     antalTerninger = 0;  
+      //Funktion changeClass, til interaktivt på terninger
+        function changeClass(tal){
         
-        //Sætter alle terninger til default
-        for (let i = 1; i <= 6; i++) {
-            var normal = document.getElementById(i);
-            normal.className = "dice face-"+i;
+            //Henter id fra terningerne
+            var interaktiv = document.getElementById(tal);
+      
+                if(interaktiv.className =="dice face-"+tal){
+                    //Skifter style fra stadie 1 til stadie 2.
+                    interaktiv.className = "one_selected face-"+tal;
+      
+                    //Giver id tal til array og giver +1 til variabel terning
+                    dice.push(tal);
+                    antalTerninger ++;
+                }
+      
+              ////Skifter style fra stadie 2 til stadie 3.
+              //Det helt samme
+              else if(interaktiv.className =="one_selected face-"+tal){
+                interaktiv.className = "both_selected face-"+tal;
+                dice.push(tal);
+                antalTerninger ++;
+              }
+      
+                //Skifter style fra stadie 3 til stadie 1.
+                else if(interaktiv.className =="both_selected face-"+tal){
+                  interaktiv.className = "dice face-"+tal;
+      
+                  //trækker to værdier ud af array + minusser variablen med 2.
+                  dice.pop(tal);
+                  dice.pop(tal);
+                  antalTerninger = antalTerninger - 2;
+                }  
+         }
+      
+         //Beregn funktion
+         function Beregn(){
+            if(antalTerninger==2){
+             
+            //Sortere array efter størst til mindst 
+            dice.sort(function(a, b){return b - a});
             
-        }
-   }
-  
-  
-</script>
+            
+              //Sætter de to array sammen til en samlet string
+              var slag = dice.join('');
 
+
+              //Laver string til int, da det skal bruges til switch
+              //Hvis slag er lille meyer eller meyer, lav om på rækkefølgen.
+              if(slag == 21){
+                slag = 12;
+              }
+      
+              else if(slag == 31){
+                slag = 13;
+                
+              }
+
+              else{
+                //laver string til int
+                slag = parseInt(slag);
+              }
+              
+            
+              
+              
+              //Erklærer variabler der skal bruges senere til at vise sandsynligheden
+                      var sandsynlighed = 0;
+      
+                    //Switch cases.
+                      switch(slag){
+
+                        case 12: sandsynlighed = 5;
+                        break;
+
+                        case 13: sandsynlighed = 11,1;
+                        break;
+
+                        case 66: sandsynlighed = 13,9;
+                        break;
+
+                        case 55: sandsynlighed = 16,7;
+                        break;
+
+                        case 44: sandsynlighed = 19,4;
+                        break;
+
+                        case 33: sandsynlighed = 22,2;
+                        break;
+
+                        case 22: sandsynlighed = 25;
+                        break;
+
+                        case 11: sandsynlighed = 27,8;
+                        break;
+
+                        case 65: sandsynlighed = 33,3;
+                        break;
+
+                        case 64: sandsynlighed = 38,9;
+                        break;
+
+                        case 63: sandsynlighed = 44,4;
+                        break;
+
+                        case 62: sandsynlighed = 50;
+                        break;
+
+                        case 61: sandsynlighed = 55,6;
+                        break;
+
+                        case 54: sandsynlighed = 61,1;
+                        break;
+
+                        case 53: sandsynlighed = 66,7;
+                        break;
+
+                        case 52: sandsynlighed = 72,2;
+                        break;
+
+                        case 51: sandsynlighed = 77,8;
+                        break;
+
+                        case 43: sandsynlighed = 83,3;
+                        break;
+
+                        case 42: sandsynlighed = 88,9;
+                        break;
+
+                        case 41: sandsynlighed = 94,4;
+                        break;
+
+                        case 32: sandsynlighed = 100;
+                        break;
+                      }
+      
+      
+                   
+      
+                      //Viser indtastet slag
+                      document.getElementById("ForrigKast").innerHTML = slag;
+                      
+                    //Output til hvad der bliver desplayed på hjemmesiden
+                    var output = "Sansynligheden for, at slå det samme eller højere er: <br/>"+ sandsynlighed +"%";
+                    document.getElementById("output").innerHTML = output;
+
+                //Kører funktionen reset
+                Reset();
+           }
+                  else{ 
+                        //Hvis to terninger ikke er valgt melder error/alert
+                        //Kører funktionen Reset(); & display alert
+                        Reset();
+                        Swal.fire("", "Vælg KUN 2 terninger", "warning");
+                      }
+      
+                      
+         }
+      
+         //Reset alle værdier, så man kan fortage sig ny beregning
+         function Reset(tal){
+      
+          //Reset variabler
+           dice = [];
+           slag = 0;
+           antalTerninger = 0;  
+              
+              //Sætter alle terninger til default
+              for (let i = 1; i <= 6; i++) {
+                  var normal = document.getElementById(i);
+                  normal.className = "dice face-"+i;
+                  
+              }
+         }
+        </script>
 
 <style>
-/* From cssbuttons.io */
+.logo {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  text-decoration: underline;
+  font-weight: 700;
+  font-style: italic;
+  font-size: 4em;
+  color: white;
+}
+
+
 .knap {
   position: relative;
   border: none;
@@ -365,6 +445,8 @@ body{
 .output{
   color: white;
   text-align: center;
+  
+  align-items: center;
 }
 
 /* Form og prikker */
@@ -468,7 +550,7 @@ body{
       .face-5 .column:nth-of-type(2) {
         justify-content: center;
         }
-        
+
   /* 6. Terning */
     .face-6 {
       display: flex;
@@ -480,5 +562,6 @@ body{
       flex-direction: column;
       justify-content: space-between;
      }
-  
 </style>
+
+ 
