--- a/Views/Home/index.cshtml
+++ b/Views/Home/index.cshtml
@@ -56,6 +56,9 @@
     body {
         font-family: Poppins, sans-serif;
         font-weight: 400;
+        background-color: darkgreen;
+        color: white;
+        padding: 20px;
     }
 
     .logo {
